--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "jwt-decode": "^4.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^5.2.1",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.22.3",
     "redux": "^5.0.1",
